; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/src/symcipher/extr_aes_ct64_dec.c_br_aes_ct64_bitslice_decrypt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/src/symcipher/extr_aes_ct64_dec.c_br_aes_ct64_bitslice_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @br_aes_ct64_bitslice_decrypt(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = shl i32 %10, 3
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %9, i64 %12
  %14 = call i32 @add_round_key(i32* %8, i32* %13)
  %15 = load i32, i32* %4, align 4
  %16 = sub i32 %15, 1
  store i32 %16, i32* %7, align 4
  br label %17

17:                                               ; preds = %34, %3
  %18 = load i32, i32* %7, align 4
  %19 = icmp ugt i32 %18, 0
  br i1 %19, label %20, label %37

20:                                               ; preds = %17
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @inv_shift_rows(i32* %21)
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @br_aes_ct64_bitslice_invSbox(i32* %23)
  %25 = load i32*, i32** %6, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* %7, align 4
  %28 = shl i32 %27, 3
  %29 = zext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %26, i64 %29
  %31 = call i32 @add_round_key(i32* %25, i32* %30)
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @inv_mix_columns(i32* %32)
  br label %34

34:                                               ; preds = %20
  %35 = load i32, i32* %7, align 4
  %36 = add i32 %35, -1
  store i32 %36, i32* %7, align 4
  br label %17

37:                                               ; preds = %17
  %38 = load i32*, i32** %6, align 8
  %39 = call i32 @inv_shift_rows(i32* %38)
  %40 = load i32*, i32** %6, align 8
  %41 = call i32 @br_aes_ct64_bitslice_invSbox(i32* %40)
  %42 = load i32*, i32** %6, align 8
  %43 = load i32*, i32** %5, align 8
  %44 = call i32 @add_round_key(i32* %42, i32* %43)
  ret void
}

declare dso_local i32 @add_round_key(i32*, i32*) #1

declare dso_local i32 @inv_shift_rows(i32*) #1

declare dso_local i32 @br_aes_ct64_bitslice_invSbox(i32*) #1

declare dso_local i32 @inv_mix_columns(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
